// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should preselect paid plan 1`] = `
<div
  className="boxed-group onboarding-step is-open"
>
  <div
    className="onboarding-step-number"
  >
    2
  </div>
  <div
    className="boxed-group-header"
  >
    <h2>
      onboarding.create_organization.enter_payment_details
    </h2>
  </div>
  <div
    className=""
  >
    <div
      className="boxed-group-inner"
    >
      <PlanSelect
        almOrganization={
          Object {
            "almUrl": "https://github.com/foo",
            "avatar": "http://example.com/avatar",
            "description": "description-foo",
            "key": "foo",
            "name": "foo",
            "personal": true,
            "privateRepos": 5,
            "publicRepos": 0,
            "url": "http://example.com/foo",
          }
        }
        onChange={[Function]}
        plan="paid"
        startingPrice={100}
      />
      <Connect(withCurrentUser(BillingFormShim))
        onCommit={[MockFunction]}
        onFailToUpgrade={[MockFunction]}
        organizationKey={[MockFunction]}
        subscriptionPlans={
          Array [
            Object {
              "maxNcloc": 1000,
              "price": 100,
            },
          ]
        }
      >
        <Component />
      </Connect(withCurrentUser(BillingFormShim))>
    </div>
  </div>
</div>
`;

exports[`should render and use free plan 1`] = `
<Step
  finished={false}
  onOpen={[Function]}
  open={true}
  renderForm={[Function]}
  renderResult={[Function]}
  stepNumber={2}
  stepTitle="onboarding.create_organization.choose_plan"
/>
`;

exports[`should render and use free plan 2`] = `
<div
  className="boxed-group onboarding-step is-open"
>
  <div
    className="onboarding-step-number"
  >
    2
  </div>
  <div
    className="boxed-group-header"
  >
    <h2>
      onboarding.create_organization.choose_plan
    </h2>
  </div>
  <div
    className=""
  >
    <div
      className="boxed-group-inner"
    >
      <PlanSelect
        onChange={[Function]}
        plan="free"
        startingPrice={100}
      />
      <form
        className="display-flex-center big-spacer-top"
        id="organization-free-plan-form"
        onSubmit={[Function]}
      >
        <SubmitButton
          disabled={false}
        >
          my_account.create_organization
        </SubmitButton>
      </form>
    </div>
  </div>
</div>
`;

exports[`should upgrade 1`] = `
<div
  className="boxed-group onboarding-step is-open"
>
  <div
    className="onboarding-step-number"
  >
    2
  </div>
  <div
    className="boxed-group-header"
  >
    <h2>
      onboarding.create_organization.choose_plan
    </h2>
  </div>
  <div
    className=""
  >
    <div
      className="boxed-group-inner"
    >
      <PlanSelect
        onChange={[Function]}
        plan="paid"
        startingPrice={100}
      />
      <Connect(withCurrentUser(BillingFormShim))
        onCommit={[MockFunction]}
        onFailToUpgrade={[MockFunction]}
        organizationKey={[MockFunction]}
        subscriptionPlans={
          Array [
            Object {
              "maxNcloc": 1000,
              "price": 100,
            },
          ]
        }
      >
        <Component />
      </Connect(withCurrentUser(BillingFormShim))>
    </div>
  </div>
</div>
`;
